home overflow fixed (hopefully)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,9 +3,10 @@ body {
     margin: 0;
 }
 
-.expi-body{
+.expi-body {
     width: 100vw;
 }
+
 .trans-back {
     display: flex;
     flex-flow: column;
@@ -34,9 +35,13 @@ body {
 }
 
 .nav-head .trans-back {
-    padding: 4rem;
-    width: 100vw;
+    width: 90vw;
+    height: 60rem;
+    display: flex;
+    flex-flow: column nowrap;
+    padding: 1em;
 }
+
 
 nav {
     margin-top: 5rem;
@@ -49,30 +54,30 @@ nav {
     display: flex;
     flex-flow: column;
     align-items: center;
+    justify-content: center;
     color: #f8f8f0;
-    width:100vw;
+    width: 100vw;
 }
 
 .directory .trans-back {
     display: flex;
     flex-flow: row;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: space-around;
+    align-items: center;
+    width: 90vw;
+    padding: 1em;
+}
+
+.directory .trans-back p {
+    width:50%;
 }
 
 img {
-    height: 35rem;
+    height: 30rem;
 }
 
 .home-txt {
     padding: 1em;
-}
-
-.nav-head .trans-back {
-    width: 100rem;
-    height: 70rem;
-    display: flex;
-    flex-flow: column nowrap;
 }
 
 .breaks {
@@ -83,6 +88,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
 }
 
 footer {
@@ -315,7 +321,7 @@ summary {
     align-items: center;
     width: 80%;
     height: 40%;
-    padding:10em;
+    padding: 10em;
     margin: 4em;
 }
 
@@ -359,8 +365,8 @@ summary {
 .cal-body {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(5,1fr);
-    width: 100%;    
+    grid-template-rows: repeat(5, 1fr);
+    width: 100%;
     border: 3px solid #14183b;
 }
 
